# qsdr

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: benchmark-report.yml  gr3.yml  gr4.yml  rust.yml
benchmark-report/: requirements.in  requirements.txt
benchmark-report/source/: channels.rst  conf.py  index.rst  qsdr_benchmark_report.py  saxpy.rst  sdr_runtimes.rst
benchmark-results/benchmark_channel/: async-channel-bounded.txt  crossbeam-bounded.txt  flume-bounded-async.txt  flume-bounded.txt  kanal-bounded-async.txt  kanal-bounded.txt  qsdr-mpsc-futex.txt  qsdr-mpsc-futures.txt  qsdr-spsc-futex.txt  qsdr-spsc-futures.txt  std-mpsc.txt  tokio.txt
benchmark-results/benchmark_qsdr/: single-core.txt
benchmark-results/benchmark_qsdr/multi-kernel/: 1_1.txt  1_2.txt  1_3.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  3_3.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  3_9.txt  4_10.txt  4_11.txt  4_12.txt  4_4.txt  4_5.txt  4_6.txt  4_7.txt  4_8.txt  4_9.txt
benchmark-results/benchmark_qsdr/multi-kernel-async-executor/: 1_1.txt  1_2.txt  1_3.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  3_3.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  3_9.txt  4_10.txt  4_11.txt  4_12.txt  4_4.txt  4_5.txt  4_6.txt  4_7.txt  4_8.txt  4_9.txt
benchmark-results/benchmark_qsdr/multi-kernel-tokio/: 1_1.txt  1_2.txt  1_3.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  3_3.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  3_9.txt  4_10.txt  4_11.txt  4_12.txt  4_4.txt  4_5.txt  4_6.txt  4_7.txt  4_8.txt  4_9.txt
benchmark-results/benchmark_saxpy/: scan-buffer-size.txt
benchmark-results/benchmark_saxpy/multi-core-async/: 2_131072_2.txt  2_131072_3.txt  2_131072_4.txt  2_131072_5.txt  2_131072_6.txt  2_16384_2.txt  2_16384_3.txt  2_16384_4.txt  2_16384_5.txt  2_16384_6.txt  2_262144_2.txt  2_262144_3.txt  2_262144_4.txt  2_262144_5.txt  2_262144_6.txt  2_32768_2.txt  2_32768_3.txt  2_32768_4.txt  2_32768_5.txt  2_32768_6.txt  2_4096_2.txt  2_4096_3.txt  2_4096_4.txt  2_4096_5.txt  2_4096_6.txt  2_524288_2.txt  2_524288_3.txt  2_524288_4.txt  2_524288_5.txt  2_524288_6.txt  2_65536_2.txt  2_65536_3.txt  2_65536_4.txt  2_65536_5.txt  2_65536_6.txt  2_8192_2.txt  2_8192_3.txt  2_8192_4.txt  2_8192_5.txt  2_8192_6.txt  (+119 more)
benchmark-results/benchmark_saxpy/multi-core-fake-message-passing-async/: 2_131072_2.txt  2_131072_3.txt  2_131072_4.txt  2_131072_5.txt  2_131072_6.txt  (+154 more)
benchmark-results/futuresdr-benchmark/: single-core.txt
benchmark-results/gr4-qsdr-benchmark/: single-core.txt
futuresdr-benchmark/: Cargo.toml
futuresdr-benchmark/src/: blocks.rs  main.rs
gr-qsdr_benchmark/: CMakeLists.txt  MANIFEST.yml
gr-qsdr_benchmark/.conda/: README.md
gr-qsdr_benchmark/apps/: CMakeLists.txt
gr-qsdr_benchmark/docs/: CMakeLists.txt  README.qsdr_benchmark
gr-qsdr_benchmark/examples/: CMakeLists.txt  gr_qsdr_benchmark.py
gr-qsdr_benchmark/grc/: CMakeLists.txt  qsdr_benchmark_benchmark_sink.block.yml  qsdr_benchmark_dummy_source.block.yml  qsdr_benchmark_saxpy.block.yml
gr-qsdr_benchmark/lib/: CMakeLists.txt  benchmark_sink_impl.cc  benchmark_sink_impl.h  dummy_source_impl.cc  dummy_source_impl.h  saxpy_impl.cc  saxpy_impl.h
gr-qsdr_benchmark/python/qsdr_benchmark/bindings/: CMakeLists.txt  benchmark_sink_python.cc  dummy_source_python.cc  python_bindings.cc  saxpy_python.cc
gr-qsdr_benchmark/python/qsdr_benchmark/bindings/docstrings/: benchmark_sink_pydoc_template.h  dummy_source_pydoc_template.h  saxpy_pydoc_template.h
gr4-qsdr-benchmark/: .clang-format  CMakeLists.txt  build-in-docker.sh
gr4-qsdr-benchmark/src/: gr4_qsdr_benchmark.cpp
qsdr/: Cargo.toml  README.md
qsdr-benchmarks/: Cargo.toml  README.md
qsdr-benchmarks/asm/: .gitignore  Makefile  benchmark_loop_alignment.py  perf benchmark plots.ipynb  saxpy_avx_fma_x1.json  saxpy_avx_fma_x1.s  saxpy_avx_fma_x1_two_memops.json  saxpy_avx_fma_x1_two_memops.s  saxpy_avx_fma_x1_two_memops_scale.json  saxpy_avx_fma_x1_two_memops_scale.s  saxpy_avx_fma_x2.json  saxpy_avx_fma_x2.s  saxpy_avx_x1.json  saxpy_avx_x1.s  saxpy_avx_x1_two_memops.json  saxpy_avx_x1_two_memops.s  saxpy_avx_x1_two_memops_scale.json  saxpy_avx_x1_two_memops_scale.s  saxpy_avx_x2.json  saxpy_avx_x2.s
qsdr-benchmarks/src/: asm.rs  buffer.rs  lib.rs  msr.rs
qsdr-benchmarks/src/asm/: x86_64.rs
qsdr-benchmarks/src/futures/: executor.rs
qsdr-benchmarks/tests/: instruction_benchmark.rs
qsdr-benchmarks/tests/instruction_benchmark/: aarch64.rs  x86_64.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/: arith.rs  branch.rs  nop.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/neon/: dual_issue.rs  gpr.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/neon/arith/: fadd.rs  fmul.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/neon/kernels/: saxpy.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/neon/load/: ld1.rs  ldr.rs
qsdr-benchmarks/tests/instruction_benchmark/aarch64/neon/store/: st1.rs  str_.rs
qsdr-benchmarks/tests/instruction_benchmark/x86_64/simd/: pipeline.rs
qsdr-benchmarks/tests/instruction_benchmark/x86_64/simd/kernels/: cmult.rs  saxpy.rs
qsdr-macros/: Cargo.toml  README.md
qsdr-macros/src/: lib.rs
qsdr/examples/: minimal_flowgraph.rs
qsdr/src/: blocks.rs  lib.rs  runtime.rs
qsdr/src/blocks/basic/: head.rs  null_sink.rs  null_source.rs  passthrough.rs  ref_clone.rs  round_robin.rs  snapshot_sink.rs  snapshot_source.rs
qsdr/src/channel/: mpsc.rs
qsdr/src/channel/mpsc/: chan.rs  futex.rs  futures.rs
qsdr/src/channel/spsc/: chan.rs  futex.rs  futures.rs
qsdr/src/kernels/: saxpy.rs
qsdr/src/runtime/: block.rs  buffer.rs  channel.rs  flowgraph.rs  port.rs  quantum.rs  scheduler.rs  sheet.rs  work.rs
qsdr/src/runtime/buffer/: cache_aligned.rs
qsdr/src/runtime/channel/: base.rs  mpsc.rs  ref_receiver.rs  spbroadcast.rs  spsc.rs  spsc_ref.rs  spscmr_ref.rs
qsdr/src/runtime/scheduler/: sequence.rs
qsdr/tests/: flowgraphs.rs
scripts/: deploy_gr4_kria.sh  deploy_gr_kria.sh  deploy_kria.sh  run_benchmarks.sh  run_benchmarks_kria.sh
(+1776 files in other folders)
