[package]
name = "futuresdr-benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "FutureSDR benchmark"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/qsdr/"
repository = "https://github.com/daniestevez/qsdr/"
keywords = ["sdr"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", rev = "0caf989b30297c9a33c6f759f9cd7398340428c9", features = ["flow_scheduler"] }
tracing = { version = "0.1", features = ["release_max_level_off"] }
qsdr = { path = "../qsdr" }
rand = "0.8.5"
