[package]
name = "qsdr-benchmarks"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "Benchmarks for qsdr experimental high-performance SDR runtime"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/qsdr/"
repository = "https://github.com/daniestevez/qsdr/"
keywords = ["sdr"]

[dependencies]
anyhow = "1"
async-channel = "2.3.1"
async-executor = "1.13.1"
clap = { version = "4.5.20", features = ["derive"] }
core_affinity = "0.8.1"
crossbeam-channel = "0.5.13"
flume = "0.11"
futures = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
kanal = "0.1.0-pre8"
libc = "0.2.159"
owo-colors = "4.1"
qsdr = { path = "../qsdr", version = "0.1.0" }
rand = "0.9"
tokio = { version = "1.4", features = ["sync", "rt-multi-thread"] }
