[package]
name = "qsdr-macros"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Estevez <daniel@destevez.net>"]
description = "qsdr macros"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniestevez/qsdr/"
repository = "https://github.com/daniestevez/qsdr/"
keywords = ["sdr"]

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
syn = "2"
quote = "1"
